fix CopyShareLink on dark mode

--- a/packages/react-tweet-card/src/components/Container/Container.module.css
+++ b/packages/react-tweet-card/src/components/Container/Container.module.css
@@ -5,7 +5,7 @@
     background: var(--tweet-card-background);
     box-sizing: border-box;
     overflow: hidden;
-    padding: 1.7em;
+    padding: 2em;
     row-gap: 1em;
     width: 100%;
     border: solid 1px rgb(239, 243, 244);
